# beta-vae

./: .gitignore  README.md  pipeline.sh  pyproject.toml  requirements.txt  shell.nix
loaders/: dataloader.py
models/: vae.py
runs/beta-vae/beta_0.3_incr/: model.pt
runs/beta-vae/beta_0.3_incr/pca/: batch.pt
runs/beta-vae/beta_1_third/: model.pt
runs/beta-vae/beta_1_third/pca/: batch.pt
runs/vanilla-vae/2025-07-09_10_37_38-133514/: model.pt
runs/vanilla-vae/2025-07-13_19_37_06-110766/pca/: batch.pt  class_batch.pt
scripts/: eval.py  train.py
utils/: image_labels.py  model_handler.py  plot_graphs.py  visualization.py
