[project]
name = "beta-vae"
version = "0.1.0"
description = "Reimplementation of a Beta-VAE"
readme = "REAME.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

